# deploy-baba

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  justfile  stack.example.toml  stack.toml
.agent-cache/: index.json
.github/workflows/: ci.yml
crates/api-core/: Cargo.toml
crates/api-core/src/: lib.rs
crates/api-graphql/: Cargo.toml
crates/api-graphql/src/: lib.rs
crates/api-grpc/: Cargo.toml
crates/api-grpc/src/: lib.rs
crates/api-merger/: Cargo.toml
crates/api-merger/src/: lib.rs
crates/api-openapi/: Cargo.toml
crates/api-openapi/src/: lib.rs
crates/config-core/: Cargo.toml
crates/config-core/src/: lib.rs
crates/config-json/: Cargo.toml
crates/config-json/src/: lib.rs
crates/config-toml/: Cargo.toml
crates/config-toml/src/: lib.rs
crates/config-yaml/: Cargo.toml
crates/config-yaml/src/: lib.rs
crates/infra-types/: Cargo.toml
crates/infra-types/src/: aws.rs  database.rs  error.rs  lib.rs  network.rs  observability.rs  services.rs  stack.rs
docs/: architecture.md  aws-setup.md  crate-guide.md  zero-cost-philosophy.md
examples/01_multi_format_config/: Cargo.toml
examples/01_multi_format_config/src/: main.rs
examples/02_api_spec_generation/: Cargo.toml
examples/02_api_spec_generation/src/: main.rs
examples/03_spec_merger/: Cargo.toml
examples/03_spec_merger/src/: main.rs
examples/04_infra_types/: Cargo.toml
examples/04_infra_types/src/: main.rs
infra/: .gitignore  cdn.tf  efs.tf  eventbridge.tf  iam.tf  lambda.tf  main.tf  outputs.tf  s3.tf  ssm.tf  terraform.tfvars.example  tfplan  variables.tf
plans/: CONVENTIONS.md  INDEX.md
plans/adr/: ADR-001-justfile-only-interface.md  ADR-002-sqlite-over-postgresql.md  ADR-003-lambda-function-url.md  ADR-004-dual-mode-entry-point.md  ADR-005-zero-cost-philosophy.md  ADR-006-efs-sqlite-s3-backup.md  ADR-007-opentofu-over-terraform.md  ADR-008-cognito-authentication.md
plans/cross-cutting/: aws-architecture.md  aws-setup-spec.md  dependency-graph.md  integration-tests.md  publishing.md  quality-gates.md
plans/drift/: DRL-2026-03-18-terraform.md  DRL-2026-03-18-xtask.md  DRL-2026-03-25-opentofu.md
plans/modules/: api-core.md  api-graphql.md  api-grpc.md  api-merger.md  api-openapi.md  auth.md  config-core.md  config-json.md  config-toml.md  config-yaml.md  dx-justfile.md  infra-types.md  opentofu.md  resume.md  terraform.md  ui-service.md  xtask.md
services/ui/: Cargo.toml
services/ui/migrations/: 001_create_jobs.sql  002_create_competencies.sql  003_seed_jobs.sql  004_seed_job_details.sql  005_seed_competencies.sql  006_seed_competency_evidence.sql
services/ui/src/: db.rs  error.rs  main.rs  openapi.rs  router.rs
services/ui/src/routes/: docs.rs  health.rs  landing.rs  mod.rs  resume.rs
services/ui/src/routes/api/: competencies.rs  crates.rs  demo.rs  jobs.rs  mod.rs  stack.rs
services/ui/templates/: base.html  landing.html  resume.html
xtask/: Cargo.toml
xtask/src/: build.rs  coverage.rs  main.rs  quality.rs  test.rs
xtask/src/aws/: mod.rs  ssm.rs  validate.rs
xtask/src/database/: backup.rs  mod.rs  restore.rs
xtask/src/deploy/: docker.rs  ecr.rs  ecs.rs  lambda.rs  mod.rs
xtask/src/infra/: bootstrap.rs  mod.rs  terraform.rs  tofu.rs
xtask/src/resume/: generate.rs  mod.rs  upload.rs
