[package]
name = "api-merger"
description = "Multi-format API specification merging with conflict resolution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
api-core = { workspace = true }
api-openapi = { workspace = true }
api-graphql = { workspace = true }
api-grpc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
utoipa = { workspace = true }
