[package]
name = "config-core"
description = "Universal zero-cost trait abstractions for configuration parsing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }

[features]
default = []
validation = []
